[GOHW-7]: api: fix naming
